# BESM-666-TestingEnvironment

./: .gitmodules  CMakeLists.txt  Makefile  README.md
runtime/: CMakeLists.txt  linker.ld  startup.s
rv64i/: CMakeLists.txt  dummy.s
